Rework params dialog base on v-card

--- a/src/scss/dialog-form.scss
+++ b/src/scss/dialog-form.scss
@@ -4,23 +4,22 @@ $base: $primary;
 $base-text: $primary-text-light;
 
 .form {
-  padding: $form-padding;
-  background-color: map-get($accent, darken-4);
+  padding: 0 $form-padding;
 }
 
 .title {
-  margin-bottom: $spacer;
   color: $base-text;
+  background-color: map-get($accent, darken-4);
 }
 
 .row-buttons {
-  margin-top: $spacer * 2;
   justify-content: space-between;
 }
 
 .button {
   margin-left: $text-btn-margin-x;
   margin-right: $text-btn-margin-x;
+  margin-bottom: $spacer * 2;
   color: $base-text;
   background-color: map-get($base, base) !important;
 }
