Rework game/map/skin params management

--- a/src/scss/dialog-form.scss
+++ b/src/scss/dialog-form.scss
@@ -12,7 +12,7 @@ $base-text: $primary-text-light;
   background-color: map-get($accent, darken-4);
 }
 
-.row-buttons {
+.buttons {
   justify-content: space-between;
 }
 
